--- a/arceos/Cargo.toml
+++ b/arceos/Cargo.toml
@@ -55,6 +55,10 @@ members = [
     "exercises/sys_map",
     "exercises/simple_hv",
     "exercises/ramfs_rename",
+
+    "axfs_ramfs",
+
+    "examples/shell",
 ]
 
 [workspace.package]
@@ -92,6 +96,6 @@ axdma = { path = "modules/axdma" }
 elf = { path = "modules/elf" }
 
 [patch.crates-io]
-kernel_guard = { path = "../crates/kernel_guard"} 
+kernel_guard = { path = "../crates/kernel_guard" }
 [profile.release]
 lto = true
