--- a/arceos/modules/axfs/Cargo.toml
+++ b/arceos/modules/axfs/Cargo.toml
@@ -29,7 +29,7 @@ axio = { version = "0.1", features = ["alloc"] }
 axerrno = "0.1"
 axfs_vfs = "0.1"
 axfs_devfs = { version = "0.1", optional = true }
-axfs_ramfs = { version = "0.1", optional = true }
+axfs_ramfs = { path = "../../axfs_ramfs", optional = true }
 crate_interface = { version = "0.1", optional = true }
 axsync = { workspace = true }
 axdriver = { workspace = true, features = ["block"] }
@@ -49,6 +49,8 @@ features = [ # no std
 
 [dev-dependencies]
 axdriver = { workspace = true, features = ["block", "ramdisk"] }
-axdriver_block = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.0", features = ["ramdisk"] }
+axdriver_block = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.0", features = [
+    "ramdisk",
+] }
 axsync = { workspace = true, features = ["multitask"] }
 axtask = { workspace = true, features = ["test"] }
